--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speech to Text App</title>
-    <link rel="icon" type="image/png" href="https://itsshuchimehta.github.io/speech-to-text-app/public/favicon.png" />
+    <link rel="icon" type="image/png" href="https://itsshuchimehta.github.io/speech-to-text-app/public/favicon.png?v=2" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
